--- a/mysite/templates/board/read.html
+++ b/mysite/templates/board/read.html
@@ -16,7 +16,7 @@
      </div>
     </div>
     <div>
-      <a href="list.html" class="btn btn-primary">게시글 목록</a>
+      <a href="{%url 'board:list' %}" class="btn btn-primary">게시글 목록</a>
       <a href="{% url 'board:update' board_id=board.id %}" class="btn btn-warning">게시글 수정</a>
       <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
         게시글 삭제
