--- a/mysite/templates/board/read.html
+++ b/mysite/templates/board/read.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load my_filter%}
 
 {% block content %}
 
@@ -11,7 +12,7 @@
                  <div>등록일시: {{board.created_at | date:"Y-m-d H:i" }}</div>
              </div>
          </div>
-         <div>{{board.content | linebreaks}}</div>
+         <div>{{board.content | markdown_to_html}}</div>
          
      </div>
     </div>
